[gd_scene load_steps=5 format=2]

[ext_resource path="res://system_browser/browser_list.gd" type="Script" id=1]
[ext_resource path="res://system_browser/browser_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://system_browser/down.png" type="Texture" id=3]
[ext_resource path="res://system_browser/up.png" type="Texture" id=4]

[node name="BrowserList" type="Spatial"]
script = ExtResource( 1 )

[node name="Items" type="Spatial" parent="."]

[node name="BrowserButtonUp" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.11, 0 )
texture = ExtResource( 4 )

[node name="BrowserButtonDown" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7.45058e-10, 0 )
texture = ExtResource( 3 )

[connection signal="pressed" from="BrowserButtonUp" to="." method="_on_button_pressed" binds= [ false ]]
[connection signal="pressed" from="BrowserButtonDown" to="." method="_on_button_pressed" binds= [ true ]]
